unpackaged/main/default/objects/Service_Agreement__c/Service_Agreement__c.object-meta.xml
<CustomObject>
    <label>Service Agreement</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Service Agreement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>