unpackaged/main/default/objects/Service_Agreement__c/fields/Active_MSA_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_MSA_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active MSA Flag</label>
    <type>Checkbox</type>
</CustomField>