unpackaged/main/default/objects/Service_Agreement__c/fields/Master_MSA_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_MSA_ID__c</fullName>
    <label>Master MSA ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>