unpackaged/main/default/objects/Service_Agreement__c/fields/MSA_Approver_Palmetto__c.field-meta.xml
<CustomField>
    <fullName>MSA_Approver_Palmetto__c</fullName>
    <label>MSA Approver (Palmetto)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>