unpackaged/main/default/objects/Service_Agreement__c/fields/MSA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Effective_Date__c</fullName>
    <label>MSA Effective Date</label>
    <type>Date</type>
</CustomField>