unpackaged/main/default/objects/Service_Agreement__c/fields/MSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_End_Date__c</fullName>
    <label>MSA End Date</label>
    <type>Date</type>
</CustomField>