unpackaged/main/default/objects/Service_Agreement__c/fields/MSA_Signator_Build_Partner__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signator_Build_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Signator (Build Partner)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendor Service Agreements</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>