unpackaged/main/default/objects/Service_Agreement__c/fields/Unique_Combo__c.field-meta.xml
<CustomField>
    <fullName>Unique_Combo__c</fullName>
    <formula>LEFT(Vendor__c, 15) + ':' + TEXT(State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Combo</label>
    <type>Text</type>
</CustomField>