unpackaged/main/default/objects/Service_Agreement__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Service Agreements</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>