unpackaged/main/default/objects/Service_Agreement__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <formula>Vendor__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Email</label>
    <type>Text</type>
</CustomField>