unpackaged/main/default/objects/Service_Agreement__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <formula>Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>