unpackaged/main/default/objects/Service_Agreement__c/fields/Vendor_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Onboarding_Status__c</fullName>
    <formula>TEXT(Vendor__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Onboarding Status</label>
    <type>Text</type>
</CustomField>