unpackaged/main/default/objects/Service_Agreement__c/fields/Vendor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Phone__c</fullName>
    <formula>Vendor__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Phone</label>
    <type>Text</type>
</CustomField>